nuevos campos en la imagen

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="habitaciones-container">
             <!-- Habitación Superior -->
             <div class="habitacion">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\1.png" alt="Habitación Superior">
+                <img src="fotos/CENTENARIO.jpg" alt="Habitación Superior">
                 <h3>Habitaciones Individuales</h3>
                 <p>1 Queen</p>
                 <p>1 Jacuzzi</p>
