nuevos cambios en las imagenes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="C:\Users\CH9styles\Downloads\Diseño sin título.png" alt="Hotel Centenario Logo">
+        <img id="logo" src="fotos/CENTENARIO.jpg" alt="Hotel Centenario Logo">
         <nav>
             <ul>
                 <li><a href="#inicio" id="inicio-link">Inicio</a></li>
@@ -92,7 +92,7 @@
         <div class="habitaciones-container">
             <!-- Habitación Superior -->
             <div class="habitacion">
-                <img src="fotos/CENTENARIO.jpg" alt="Habitación Superior">
+                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\1.png" alt="Habitación Individual">
                 <h3>Habitaciones Individuales</h3>
                 <p>1 Queen</p>
                 <p>1 Jacuzzi</p>
@@ -102,7 +102,7 @@
 
             <!-- Habitación Ejecutiva -->
             <div class="habitacion">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\1.png" alt="Habitación Ejecutiva">
+                <img src="fotos/1.png" alt="Habitación Matrimonial">
                 <h3>Habitaciones Matrimoniales</h3>
                 <p>1 Queen</p>
                 <p>1 Jacuzzi</p>
@@ -112,7 +112,7 @@
 
             <!-- Habitación Ejecutiva Vip -->
             <div class="habitacion">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\IMG_6.png" alt="Habitación Ejecutiva Vip">
+                <img src="fotos/IMG_6.png" alt="Habitación Matrimonial Delux">
                 <h3>Habitaciones Matrimoniales Delux</h3>
                 <p>1 Queen</p>
                 <p>1 Jacuzzi</p>
@@ -122,7 +122,7 @@
 
             <!-- Habitación Doble -->
             <div class="habitacion">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\3.png" alt="Habitación Doble">
+                <img src="fotos/3.png" alt="Habitación Doble">
                 <h3>Habitaciones dobles</h3>
                 <p>2 Camas Queen</p>
                 <p>1 Jacuzzi</p>
@@ -132,7 +132,7 @@
 
             <!-- Habitación Familiar -->
             <div class="habitacion">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\4.png" alt="Habitación Familiar">
+                <img src="fotos/4.png" alt="Habitación Triple">
                 <h3>Habitaciones Triples</h3>
                 <p>1 Cama King, 2 Camas Queen</p>
                 <p>Varias habitaciones familiares están comunicadas entre sí para mayor comodidad.</p>
@@ -141,7 +141,7 @@
 
             <!-- Otra habitación adicional -->
             <div class="habitacion">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\IMG_49263.png" alt="Otra Habitación">
+                <img src="fotos/IMG_49263.png" alt="Habitaciones Suites">
                 <h3>Habitaciones Suites</h3>
                 <p>Disfruta de la mejor comodidad</p>
                 <button class="reservar-button">Reservar</button>
@@ -157,7 +157,7 @@
         <div class="restaurante-container">
             <!-- alta cocina -->
             <div class="restaurante">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\IMG_4926.png" alt="Habitación Superior">
+                <img src="fotos/IMG_4926.png" alt="Alta Cocina Peruana">
                 <h3>▇▇▓▒░ 「 ALTA COCINA PERUANA 」 ░▒▓▇▇▇</h3>
                 <p>Atención</p>
                 <p>sazón</p>
@@ -166,7 +166,7 @@
             </div>
             <!-- gastronomia -->
             <div class="restaurante">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\IMG_5157.png" alt="Habitación Ejecutiva Vip">
+                <img src="fotos/IMG_5157.png" alt="Experiencia Gastronómica">
                 <h3>▓▒░「EXPERIENCIA GASTRONÓMICA」░▒▓</h3>
                 <p>Sabores Nacionales</p>
                 <p>Sabores Internaciones</p>
@@ -175,7 +175,7 @@
 
             <!-- Cocteleria -->
             <div class="restaurante">
-                <img src="C:\Users\CH9styles\Searches\Desktop\HOTEL CENTENARIO\fotos\IMG_49266.png" alt="Habitación Ejecutiva">
+                <img src="fotos/IMG_49266.png" alt="Coctelería Peruana">
                 <h3>▇▇▓▒░ 「 COCTELERÍA PERUANA 」 ░▒▓▇▇▇</h3>
                 <p>Barman</p>
                 <p>Bar</p>
