nuevos cambios en la imagen footer

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     
 
     <footer>
-        <img id="logo-footer" src="C:\Users\CH9styles\Downloads\Diseño sin título.png" alt="Hotel Centenario Logo">
+        <img id="logo-footer" src="fotos/CENTENARIO.jpg" alt="Hotel Centenario Logo">
         <div id="contacto" class="footer-div">
             <h3>Datos de Contacto</h3>
             <p><i class="fas fa-map-marker-alt"></i> Av. 28 de Julio 836, Huacho</p>
