nuevos cambios en Galeria

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </section>
     
 
-    <section id="galeria">
+    <section id="Galeria">
         <h2>Galería</h2>
         <p>Guarda y recuerda siempre tus mejores momentos.</p>
     </section>
