--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#habitaciones" id="habitaciones-link">Habitaciones</a></li>
                 <li><a href="#restaurante" id="restaurante-link">Restaurante</a></li>
                 <li><a href="#servicios" id="servicios-link">Servicios</a></li>
-                <li><a href="#galeria" id="galeria-link">Galería</a></li>
+                <li><a href="#galeria" id="galeria-link">Galer</a></li>
                 <li><a href="#reservar" id="reservar-link">Reservar</a></li>
             </ul>
         </nav>
@@ -226,7 +226,7 @@
     </section>
     
 
-    <section id="Galeria">
+    <section id="galeria">
         <h2>Galería</h2>
         <p>Guarda y recuerda siempre tus mejores momentos.</p>
     </section>
