nuevos cambios la seccion galeria

--- a/index.html
+++ b/index.html
@@ -229,6 +229,48 @@
     <section id="galeria">
         <h2>Galería</h2>
         <p>Guarda y recuerda siempre tus mejores momentos.</p>
+
+        <div class="carrusel">
+            <div class="carrusel-items">
+              <div class="carrusel-item">
+                <img src="fotos/IMG_5157.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/IMG_49269.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/IMG_49266.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/IMG_4926.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/1.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/2.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/3.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/Individual.jpg" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/IMG_6.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/IMG_49263.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/IMG_6.png" alt="" />
+              </div>
+              <div class="carrusel-item">
+                <img src="fotos/IMG_49263.png" alt="" />
+              </div>
+            </div>
+        </div>
+
     </section>
 
     <section id="reservar">
