--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
                 <!-- Agrega más servicios siguiendo el mismo formato -->
             </div>
         </div>
+
+        <nav class="navbar container">
+
+            <div class="left">
+                <ul>
+                    <li>logo</li>
+                    <li>enero 2023</li>
+                    <li>hora 9:00</li>
+                </ul>
+            </div>
+            <div cllas="right">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">nosotros</a></li>
+                    <li><a href="#">servicios</a></li>
+                </ul>
+            </div>
+        </nav>
         
         <div id="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3915.0808456023383!2d-77.61418842508522!3d-11.107352525121698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9106df74ceed9139%3A0x4da5bbb5f06bf7ad!2sAvenida%2028%20de%20Julio%20836%2C%20Huacho%2015136!5e0!3m2!1ses-419!2spe!4v1697505244348!5m2!1ses-419!2spe" width="100%" height="300" style="border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
