nuevos cambios en la seccion reserva

--- a/index.html
+++ b/index.html
@@ -297,9 +297,16 @@
                 <input type="number" id="adultos" name="adultos" required>
                 <label for="ninos">Niño(s):</label>
                 <input type="number" id="ninos" name="ninos" required>
-                <button type="submit">Reservar</button>
+                <button type="submit" id="ver-detalle">Ver Detalle</button>
+
             </form>
             <div id="resultado-reserva">
+            </div>
+
+            <div class="reservacion-button">
+                <a id="completar-reserva" href="https://wa.me/51903501740" target="_blank" rel="noopener" disabled>
+                    Completar Reservación
+                </a>
             </div>
             
         </div>
