nuevos cambios en la seccion reserva1

--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
     </section>
 
     <section id="reservar">
+
+        <div id="carousel-container"></div>
+          
         <div id="reserva" class="reserva-container">
             <h2>Hagámoslo juntos</h2>
             <p>Estamos aquí para ayudarte. ¡Contáctanos para hacer una reserva!</p>
