--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Disfruta de una estancia relajante en nuestro hermoso hotel.</p>
         </div>
         <div id="contenido-inicio">
-            <h1 style="font-size: 24px; text-decoration: underline;">HOTEL CENTENARIO| Huacho - Perú</h1>
+            <h1 style="font-size: 100%; text-decoration: underline;">HOTEL CENTENARIO| Huacho - Perú</h1>
 
             <p>Somos Hotel Centenario con más de 57 años en el mundo empresarial .</p>
 
