--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-pzjw8H/lMrD9Vs6s5n9ZxPswa67iS90accPTvn8GC7f8Hr7cNmKn+Tt9kpk1xV5m" crossorigin="anonymous">
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0" nonce="tu-valor-de-nonce"></script>
 
 </head>
 <body>
@@ -34,7 +35,7 @@
             <h2>¡Vive la experiencia CENTENARIO!</h2>
             <p>Disfruta de una estancia relajante en nuestro hermoso hotel.</p>
         </div>
-        
+
         <div id="redes-sociales-container">
             <div id="siguenos-texto">Síguenos en:</div>
             <a href="https://www.facebook.com/CentenarioHotelHuacho" target="_blank" class="social-icon facebook" rel="noopener"><i class="fab fa-facebook"></i></a>
@@ -42,7 +43,15 @@
             <a href="https://www.tiktok.com/@hotelcentenariohuacho?is_from_webapp=1&sender_device=pc" target="_blank" class="social-icon tiktok" rel="noopener"><i class="fab fa-tiktok"></i></a>
         </div>
         
+        <div id="video-container">
+        <!-- Contenedor del video de Facebook -->
+        <div class="fb-video-container">
+            <div class="fb-video" data-href="https://www.facebook.com/CentenarioHotelHuacho/videos/299623013028161/" data-width="500" data-show-text="false">
+            </div>
+        </div>
 
+
+        </div>
 
         <div id="map-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3915.0808456023383!2d-77.61418842508522!3d-11.107352525121698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9106df74ceed9139%3A0x4da5bbb5f06bf7ad!2sAvenida%2028%20de%20Julio%20836%2C%20Huacho%2015136!5e0!3m2!1ses-419!2spe!4v1697505244348!5m2!1ses-419!2spe" width="100%" height="100" style="border-radius: 10px; margin: 10% 0% 0%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
