nuevos cambios en la seccion inicio 6

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div id="carousel-container"></div>
           
         <div id="reserva" class="reserva-container">
-            <h2>Hagámoslo juntos</h2>
+            <h2>𝐇𝐚𝐠á𝐦𝐨𝐬𝐥𝐨 𝐉𝐮𝐧𝐭𝐨𝐬</h2>
             <p>Estamos aquí para ayudarte. ¡Contáctanos para hacer una reserva!</p>
             <form id="reserva-form">
                 <label for="habitacion">Seleccione Habitación:</label>
