nuevos cambios en la seccion inicio 7

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <h3>Habitaciones Individuales</h3>
                 <p><i class="fas fa-male"></i> 1 persona</p> <!-- Icono de persona -->
                 <p><i class="fas fa-bed"></i> Cama de 2 plazas</p> <!-- Icono de cama -->
-                <p>Comodas habitaciones cuenta con cable tv, baño individual, agua caliente 24h, servico a la habitacion.</p>
+                <p>Cómodas habitaciones cuenta con cable tv, baño individual, agua caliente 24h, servicio a la habitacion.</p>
                 <button class="reservar-button">Reservar</button>
             </div>
 
@@ -158,7 +158,7 @@
                 <h3>Habitaciones Suites</h3>
                 <p><i class="fas fa-male"></i><i class="fas fa-female"></i> 1 Cama 2 Plazas</p> <!-- Iconos de personas -->
                 <p><i class="fas fa-user"></i> 2 personas</p> <!-- Icono de persona -->
-                <p>Aplias habitaciones con una pequeña sala en la entrada para compartir momentos agradables.</p>
+                <p>Amplias habitaciones con una pequeña sala en la entrada para compartir momentos agradables.</p>
                 <button class="reservar-button">Reservar</button>
             </div>
         </div>
