nuevos cambios en la seccion inicio 9

--- a/index.html
+++ b/index.html
@@ -204,46 +204,55 @@
         </div>
     </section>
 
+        <!-- Dentro de tu sección de servicios -->
     <section id="servicios">
-        <h2>Nuestros servicios</h2>
-        <p>Te ofrecemos servicios de alta calidad para que tengas una estancia inolvidable.</p>
-        <div class="servicios-contenido">
-            <div class="servicio">
-                <i class="fas fa-wifi"></i>
-                <h3>Internet</h3>
-                <p>Hay conexión a internet Wi-Fi disponible en todo el establecimiento. Gratis.</p>
+        <div id="carousel-container-servicios" class="carousel-container">
+            <div class="carrusel-items">
+                
             </div>
-            <div class="servicio">
-                <i class="fas fa-utensils"></i>
-                <h3>Restaurante</h3>
-                <p>Atención de 7 am a 12 pm para el público en general.</p>
-                <p>Atención a las habitaciones del hotel las 24h.</p>
-            </div>
-            <div class="servicio">
-                <i class="fas fa-parking"></i>
-                <h3>Aparcamiento</h3>
-                <p>Cochera las 24h solo para huéspedes.</p>
-            </div>
-            <div class="servicio">
-                <i class="fas fa-bath"></i>
-                <h3>Baño</h3>
-                <p>Papel higiénico, toallas, bañera o ducha, baño privado, artículos de aseo gratis.</p>
-            </div>
-            <div class="servicio">
-                <i class="fas fa-swimming-pool"></i>
-                <h3>Piscina</h3>
-                <p>Acceso para el público con una tarifa simbólica.</p>
-                <p>Acceso libre a huéspedes, sin cargos adicionales.</p>
-            </div>
-            <div class="servicio">
-                <i class="fas fa-paw"></i>
-                <h3>Mascotas</h3>
-                <p>No se permite el acceso.</p>
-            </div>
-            <!-- Agrega más servicios siguiendo el mismo formato -->
+        </div>
+        <div id="servicios-container" class="servicios-contenido">
+            <h2>Servicios por Noche</h2>
+            <ul id="servicios-list">
+                <li class="servicio-item">
+                    <i class="fas fa-wifi"></i>
+                    <span>WiFi</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-tv"></i>
+                    <span>Cable TV</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-swimming-pool"></i>
+                    <span>Piscina</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-hot-tub"></i>
+                    <span>Agua caliente las 24 horas</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-coffee"></i>
+                    <span>Room Service</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-cookie-bite"></i>
+                    <span>Servicio de Snack Bar</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-utensils"></i>
+                    <span>Restaurante Saratoga</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Seguridad</span>
+                </li>
+                <li class="servicio-item">
+                    <i class="fas fa-car"></i>
+                    <span>Estacionamiento</span>
+                </li>
+            </ul>
         </div>
     </section>
-    
 
     <section id="galeria">
         <h2>Galería</h2>
