nuevos cambios en la seccion restaurante 3

--- a/index.html
+++ b/index.html
@@ -182,24 +182,24 @@
                 <h3>「 ALTA COCINA PERUANA 」 </h3>
                 <div class="contenido-texto">
                     <div class="texto-container">
-                        <p>Atención</p>
-                        <p>sazón</p>
-                        <p>Nuestro restaurante Saratoga ofrece cocina peruana que captura los sabores típicos de la costa, sierra, selva del Perú. y tambien ten una experiencia única con nuestros sabores internacionales</p>
+                        <p><i class="fas fa-check"></i> Atención</p>
+                        <p><i class="fas fa-heart"></i> Sazón</p>
+                        <p>Nuestro restaurante Saratoga ofrece cocina peruana que captura los sabores típicos de la costa, sierra, selva del Perú. y también ten una experiencia única con nuestros sabores internacionales</p>
                         <p> Respeta el producto y al mismo tiempo experimenta con texturas sofisticadas que no dejarán de sorprenderte.</p>
                     </div>
                 </div>
             </div>
             <!-- gastronomia -->
             <div class="restaurante">
-                <img src="fotos/IMG_5157.png" alt="Experiencia Gastronómica">
                 <h3>「EXPERIENCIA GASTRONÓMICA」</h3>
                 <div class="contenido-texto">
                     <div class="texto-container">
-                        <p>Sabores Nacionales</p>
-                        <p>Sabores Internacionales</p>
+                        <p><i class="fas fa-globe-americas"></i> Sabores Nacionales</p>
+                        <p><i class="fas fa-globe"></i> Sabores Internacionales</p>
                         <p>En Saratoga tenemos la mejor oferta gastronómica peruana e internacional. Es el lugar ideal para comenzar el día con un fantástico desayuno, complementado con una variedad de opciones peruanas/internacionales. Disfruta del almuerzo o cena, desde ensaladas hasta comida local y un bufet de postres exquisitos.</p>
                     </div>
                 </div>
+                <img src="fotos/IMG_5157.png" alt="Experiencia Gastronómica">
             </div>
             <!-- Cocteleria -->
             <div class="restaurante">
@@ -207,8 +207,8 @@
                 <h3> 「 COCTELERÍA PERUANA 」 </h3>
                 <div class="contenido-texto">
                     <div class="texto-container">
-                        <p>Barman</p>
-                        <p>Bar</p>
+                        <p><i class="fas fa-glass-martini-alt"></i> Barman</p>
+                        <p><i class="fas fa-glass-cheers"></i> Bar</p>
                         <p>A la hora de tomar un cóctel o pasar una noche de relax, nuestro Lobby Lounge y nuestro bar Saratoga, todo dentro del hotel, son grandes propuestas, cada una con una personalidad diferente que incluye todo lo necesario para disfrutar de cada momento.</p>
                     </div>
                 </div>
@@ -216,7 +216,6 @@
         </div>
     </section>
     
-
         <!-- Dentro de tu sección de servicios -->
     <section id="servicios">
         <div id="carousel-container-servicios" class="carousel-container">
