nuevos cambios en la seccion restaurante 4

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </section>
     
     <section id="restaurante">
-        <h2>¡Nuestro restaurante!</h2>
+        <h2>¡Nuestro restaurante SARATOGA!</h2>
         <p>Comparte y disfruta de sabores que te harán sentir bien.</p>
         <div id="carousel-container-restaurante"></div>
         <div class="restaurante-container">
