nuevos cambios en la seccion restaurante 8

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             </div>
             <!-- gastronomia -->
             <div class="restaurante">
-                <h3>「EXPERIENCIA GASTRONÓMICA」</h3>
+                <h3>「VARIEDAD DE SABORES」</h3>
                 <div class="contenido-texto">
                     <div class="texto-container">
                         <p><i class="fas fa-globe-americas"></i> Sabores Nacionales</p>
