nuevos cambios en la seccion restaurante 32

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
 
 
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v13.0" nonce="tu-valor-de-nonce"></script>
+    <script async defer crossorigin="anonymous" src="https://www.tiktok.com/@hotelcentenariohuacho/video/7313412310528281861?is_from_webapp=1&sender_device=pc&web_id=7338649244782183942" nonce="tu-valor-de-nonce"></script>
 
 </head>
 <body>
